2005-02-07 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNode) to speed up volume smoothing, the
	required improvement for smoothing to continue has been raised and
	made porportional to current cost.

2005-02-07  9:48 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramXYZ) renamed from gridSmoothNodeQP.
	Added some slight perceived numerical robustness improvements.
	* src/gridcad.c (gridLinearProgramUV) Added some slight perceived
	numerical robustness improvements, but still gives ocational NaN's
	and strange valgrind behavior.
	* src/gridcad.c (gridSmoothNode) added gridLinearProgramUV within
	a FALSE if-then block. changed the termination criteria of volume
	node smoothing.

2005-02-03 22:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) added. This is a copy and
	edit of gridSmoothNodeQP to smooth faces using quadratic
	programing.
	
2005-02-03 17:37 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridStoreAllARDerivatives) moved to gridcad
	and renamed.
	* src/gridcad.c (gridStoreVolumeCostDerivatives) moved from
	gridmetric and renamed.
	* src/gridcad.c (gridStoreFaceCostParameterDerivatives) created
	to allow quadradic programming optimization of face nodes.
	
2005-02-03 13:44 Mike Park  <mike.park@nasa.gov>

	* src/grid.c,src/gridmetric.c,src/gridcad.c renamed the stored AR
	routines to stored cost.
	
2005-02-03 13:11 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridStoreAR) renamed from gridAddStoredAR. Also
	added a bunch of missing unit tests that I was to lazy to add when
	this was originally implemented.
	* src/gridmetric.c (gridStoreAllARDerivatives) renamed from
	gridStoreARDerivative.
	* src/gridcad.c (gridSmoothNodeQP) followed rename.
	
2005-02-02 09:25 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (REQUIRED_IMPROVEMENT) made the value very small,
	1.0e-12, so that the maximum possible swaps are allowed. The more